--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "husky": "^8.0.0",
     "is-ci": "^3.0.1",
     "jest": "^28.1.1",
-    "log4js": "^6.3.0"
+    "log4js": "^6.3.0",
+    "typescript": "^4.7.3"
   },
   "browser": {
     "os": false
