--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,7 @@
 *.txt   text eol=lf
 *.xml   text eol=lf
 .husky/* text eol=lf
+*.yml    text eol=lf
 
 # Exclude the `.htaccess` file from GitHub's language statistics
 # https://github.com/github/linguist#using-gitattributes
